WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153312
[B3][Win64] Compile fixes.
https://bugs.webkit.org/show_bug.cgi?id=153312
Summary
[B3][Win64] Compile fixes.
peavo
Reported
2016-01-21 11:25:00 PST
The MSVC runtime library has several overloads of sin, cos, pow, and log. We need to specify which overload we want to use.
Attachments
Patch
(2.50 KB, patch)
2016-01-21 11:31 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(2.65 KB, patch)
2016-01-21 12:55 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2016-01-21 11:31:28 PST
Created
attachment 269475
[details]
Patch
Alex Christensen
Comment 2
2016-01-21 12:07:41 PST
Comment on
attachment 269475
[details]
Patch This should be done the same way as
https://bugs.webkit.org/show_bug.cgi?id=153127
peavo
Comment 3
2016-01-21 12:55:18 PST
Created
attachment 269484
[details]
Patch
peavo
Comment 4
2016-01-21 12:55:59 PST
(In reply to
comment #2
)
> Comment on
attachment 269475
[details]
> Patch > > This should be done the same way as >
https://bugs.webkit.org/show_bug.cgi?id=153127
Thanks for reviewing :) Updated patch.
WebKit Commit Bot
Comment 5
2016-01-21 14:50:16 PST
The commit-queue encountered the following flaky tests while processing
attachment 269484
[details]
: editing/selection/extend-selection-home-end.html
bug 50944
(authors:
kalman@chromium.org
and
rniwa@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2016-01-21 14:50:18 PST
The commit-queue encountered the following flaky tests while processing
attachment 269484
[details]
: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2016-01-21 15:45:55 PST
Comment on
attachment 269484
[details]
Patch Clearing flags on attachment: 269484 Committed
r195425
: <
http://trac.webkit.org/changeset/195425
>
WebKit Commit Bot
Comment 8
2016-01-21 15:46:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug