[B3][Win64] Compile fixes. https://bugs.webkit.org/show_bug.cgi?id=153312

Reviewed by Alex Christensen.

Since MSVC has several overloads of sin, cos, pow, and log, we need to specify
which one we want to use.

* ftl/FTLB3Output.h:
(JSC::FTL::Output::doubleSin):
(JSC::FTL::Output::doubleCos):
(JSC::FTL::Output::doublePow):
(JSC::FTL::Output::doubleLog):


Canonical link: https://commits.webkit.org/171395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195425 268f45cc-cd09-0410-ab3c-d52691b4dbfc